2001-10-19  shawn  <sabetts@vcn.bc.ca>

	* nethack.el (nethack-parse-status-lines): regexp truncated.
	(nethack-parse-status-lines): alter regexp to handle strengths > 18

	* nethack-api.el (nethack-api-putstr): only print the status when
	both status lines have been received.

	* nethack.el (nethack-status-alist): new defvar
	(nethack-status-string): likewise
	(nethack-parse-status-lines): new function
	(nethack-format-status): likewise

	* nethack-api.el (nethack-api-putstr): parse the status lines and
	print the status according to the format string
	nethack-status-string.

2001-10-19  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* nethack.el (nethack-red-face): Add -face, and to all other color
	faces.

	* nethack-api.el (nethack-api-toplines, nethack-api-win-message)
	(nethack-api-win-message, nethack-api-win-map)
	(nethack-api-win-status, nethack-api-ae, nethack-api-ae)
	(nethack-api-li, nethack-api-li, nethack-api-ospeed): Comment out.

	* nethack.el (nethack): If the process is already running,
	display all of the game windows.

	* nethack-api.el (nethack-api-exit-nhwindows): Clean up buffers.
	(nethack-map-buffer): New variable.
	(nethack-status-buffer): Likewise.
	(nethack-message-buffer): Likewise.
	(nethack-api-create-nhwindow): Record the "standard" buffers into
	the above variables.
	(nethack-api-display-nhwindow): Setup the windows for first time
	use.
	(nethack-status-window-height): New variable.
	(nethack-message-window-height): Likewise.
	(nethack-setup-window-configuration): New function.

2001-10-18  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* nethack-apix.el: Remove file, move functions into
	nethack-api.el.

	* nethack-keys.el (nethack-mode-map): Add nethack-command-loot
	binding.

	* nethack.el (gamegrid,nethack-apix): Don't require.
	(nethack-process-filter): Remove save-excursion wrapper.
	(nethack-setup-map-buffer): Remove.
	(nethack-map-mode): Turn off show-paren mode.

	* nethack-api.el (gamegrid): Require.